syntax = "proto3";

package client_info;
option go_package = "github.com/psds-microservice/api-gateway/pkg/gen";

import "common.proto";
import "google/api/annotations.proto";

message ClientInfo {
  string client_id = 1;
  string user_id = 2;
  string ip_address = 3;
  string user_agent = 4;
  string session_id = 5;
  int64 connected_at = 6;

  message GeoLocation {
    double latitude = 1;
    double longitude = 2;
    string country = 3;
    string city = 4;
    string timezone = 5;
  }

  message DeviceInfo {
    string platform = 1;
    string os = 2;
    string os_version = 3;
    string browser = 4;
    string browser_version = 5;
    string device_model = 6;
    int32 screen_width = 7;
    int32 screen_height = 8;
    bool is_mobile = 9;
    bool is_tablet = 10;
    bool is_desktop = 11;
  }

  message QualityPreferences {
    string preferred_quality = 1;
    int32 max_bitrate = 2;
    int32 max_resolution = 3;
    bool auto_adjust = 4;
    string codec_preference = 5;
  }

  message ClientStats {
    int64 bytes_received = 1;
    int64 bytes_sent = 2;
    int64 frames_received = 3;
    float average_fps = 4;
    float packet_loss = 5;
    int64 last_activity = 6;
    float network_latency = 7;
  }

  message SecurityTags {
    bool is_authenticated = 1;
    repeated string roles = 2;
    string auth_method = 3;
    bool is_vpn = 4;
    bool is_proxy = 5;
    string threat_level = 6;
    repeated string permissions = 7;
  }

  GeoLocation location = 7;
  DeviceInfo device = 8;
  QualityPreferences quality = 9;
  ClientStats stats = 10;
  SecurityTags security = 11;
  map<string, string> custom_metadata = 12;
}

message ConnectionEvent {
  string client_id = 1;
  string ip_address = 2;
  string user_agent = 3;
  int64 connected_at = 4;
  int64 disconnected_at = 5;
  ClientInfo client_info = 6;
  string event_type = 7;
}

message GetClientInfoRequest {
  string client_id = 1;
}

message UpdateClientRequest {
  string client_id = 1;
  ClientInfo client_info = 2;
}

message ListClientsRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListClientsResponse {
  repeated ClientInfo clients = 1;
  int32 total = 2;
}

service ClientInfoService {
  rpc ClientConnected(ConnectionEvent) returns (common.ApiResponse) {
    option (google.api.http) = { post: "/api/v1/clients/connected" body: "*" };
  }
  rpc ClientDisconnected(ConnectionEvent) returns (common.ApiResponse) {
    option (google.api.http) = { post: "/api/v1/clients/disconnected" body: "*" };
  }
  rpc UpdateClientInfo(UpdateClientRequest) returns (common.ApiResponse) {
    option (google.api.http) = { put: "/api/v1/clients/{client_id}" body: "*" };
  }
  rpc GetClientInfo(GetClientInfoRequest) returns (ClientInfo) {
    option (google.api.http) = { get: "/api/v1/clients/{client_id}" };
  }
  rpc ListActiveClients(ListClientsRequest) returns (ListClientsResponse) {
    option (google.api.http) = { get: "/api/v1/clients/active" };
  }
}
